--- a/2015-04-21-StLouis.md
+++ b/2015-04-21-StLouis.md
@@ -11,6 +11,8 @@ I will be in St. Louis for the FIRST Robotics world championships!
 
 ### Apparel
 
+I need money to cover additional team apparel. 
+
 | Item | Cost |
 |--------|------|
 | Team Black Polo | $30 |
@@ -19,7 +21,7 @@ I will be in St. Louis for the FIRST Robotics world championships!
 
 ### Transportation
 
-I will be taking a roundtrip charter bus from Hatboro-Horsham High School to St. Louis for with my robotics team.
+I will be taking a roundtrip charter bus from Hatboro-Horsham High School to St. Louis for with my robotics team. It's a 12-16 hour overnight ride per direction.
 
 | Item | Cost |
 |--------|------|
@@ -32,7 +34,7 @@ There were no other rooms available in St. Louis and my friend in Ferguson is an
 
 I'm splitting a room in the Westin with 3 other team members.
 
-However, these rooms have only beds to accomidate 1 person so I have to purchase a twin size air metress in order to sleep on the floor.
+However, these rooms have only beds to accomidate 1 person so I have to purchase a twin size air mattress in order to sleep on the floor.
 
 | Item | Cost |
 |--------|------|
@@ -52,16 +54,16 @@ I will not spend $27 for a Metrolink pass to since everything is within 1 mile (
 
 ### Food
 
-I am expected to spend money for breakfast and lunch, and potentially some overpriced italian ice if I am not allowed leave the convention center until dusk. Dinners are covered by the team budget. In most cases, I have no control on where to eat and it won't be the cheapest option.
+I am expected to spend money for breakfast and lunch, and potentially some overpriced italian ice if I am not allowed leave the convention center until the day is over. Dinners are covered by the team budget. In most cases, I have no control on where to eat and it won't be the cheapest option.
 
 | Item | Cost |
 |--------|------|
-| Rest Area Stops | $10*3 |
+| Rest Area Stops | $10*2 |
 | Breakfast | $8/day*4 |
 | Lunch | $12/day*4 |
 | Snacks | $8/day*4 |
 | **Total** | $142 |
 
-### Totals
+### Final Totals
 
 TBD
